2003-04-03  Ross Burton  <ross@burtonini.com>

	* tests/glade-test.c (mkdir_recursive): Steal from gnome-vfs to
	replace my crap mkdirs().

2003-04-03  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.h: Whoops, inherit from GObject not GObject*.
	* src/sj-extractor.c: Signal fixes.

	* tests/glade-test.c: Use SjExtractor.
	* tests/Makefile.am: Update to use SjExtractor.

2003-04-03  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	GObjectify the GStreamer code. Hopefully I'll remove
	sj-gstreamer.[ch] later today.

2003-04-03  Ross Burton  <ross@burtonini.com>

	* tests/glade-test.c (mkdirs): Reimplemented mkdirs(). Still
	sucks, but at least works.

2003-04-02  Ross Burton  <ross@burtonini.com>

	* tests/glade-test.c (pop_and_rip): Whoops, I'd "fixed" the ObiWan
	and made it an ObiTwo. Fixing again.

2003-04-02  Ross Burton  <ross@burtonini.com>

	* tests/glade-test.c: Whoops, fix some compile errors.

2003-04-02  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade: Added format buttons to the prefs
	dialog.
	* tests/glade-test.c: More poking at setting the encoding format,
	implement cancelling the rip.

2003-04-02  Ross Burton  <ross@burtonini.com>

	* src/sj-gstreamer.h:
	* src/sj-gstreamer.c:
	Add a cancel callback, and poke at changing the encoding
	format. This will be rewritten.

	* README: Updated again.

2003-04-01  Ross Burton  <ross@burtonini.com>

	* src/sj-gstreamer.c: Take into account the track starting
	position when reporting progress callbacks.
	* tests/glade-test.c: Fix an Obi-Wan in the album progress bar,
	and record the track duration correctly.

2003-04-01  Ross Burton  <ross@burtonini.com>

	* README: Update to reflect new state -- it works!

	* data/sound-juicer.desktop.in: Added.
	* src/sound-juicer.png: Renamed from grip-48.png
	* data/Makefile.am: Added, install data files.
	* src/Makefile.am: Added, all it does at the moment it automake
	the libbacon updates.