@@ -1,5 +1,9 @@
 2003-04-03  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-gstreamer.[ch]: Removed, replaced by sj-extract.
+
+2003-04-03  Ross Burton  <ross@burtonini.com>
+
 	* tests/glade-test.c (mkdir_recursive): Steal from gnome-vfs to
 	replace my crap mkdirs().
 
